tests/lustre/typechecking/shouldPass/test_recursive_array_def.lus
node a(A: int^5) returns (B: int^5)
let
  B[i] = A[i] + 1;
tel